<resources>
    <string name="app_name">AppFilm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movie">MOVIES</string>
    <string name="tvShow">TV SHOW</string>

    <string name="release">Release Date :</string>
    <string name="genre">Genre :</string>
    <string name="duration">Duration :</string>
    <string name="director">Director / Creator :</string>
    <string name="overview">Synopsis :</string>
    <string name="poster">film poster</string>
    <string name="splash_item">splash_item</string>
    <string name="poster_item">poster_item</string>
    <string name="activity_detail_title">Detail Film</string>

</resources>